# kaldi-asr-client

./: .gitignore  CMakeLists.txt  MODEL.md  README.md  asr_client_imp.cc  asr_client_imp.h  build.sh  install_deps.sh  kaldi_asr_client.py  kaldi_asr_parallel_client.cc  minimal_client.cc  setup.cfg
scripts/: build.sh  install_deps.sh  launch_server.sh  run_tests.sh  server_launch_daemon.sh  setup_prebuilts.sh
src/c++/: CMakeLists.txt  asr_client_imp.cc  asr_client_imp.h  grpc_connect_client.cc  kaldi_asr_parallel_client.cc
src/python/: kaldi_asr_client.py
src/python/kaldi_asr_client/: __init__.py  kaldi_asr_client.py  prebuilts  restart_hack.py  test_util.py
src/python/kaldi_asr_client/e2e_tests/: invalid_server.py  invalid_wav.py  multi_gpu.py  multi_infer.py  single_gpu.py
src/python/kaldi_asr_client/examples/: argv.py
