[metadata]
name = kaldi_asr_client
version = attr: kaldi_asr_client.__version__

[options]
packages = find_namespace:
package_dir =
    = src/python
install_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src/python

[options.package_data]
kaldi_asr_client.prebuilts = *
